--- a/style.css
+++ b/style.css
@@ -3,9 +3,11 @@
     box-sizing: border-box;
 }
 
+@import url('https://fonts.googleapis.com/css?family=Akshar:100,100i,300,300i,400,400i,700,700i,900,900i|Akshar&display=swap');
+
 body {
     margin: 0px;
-    font-family: Arial, sans-serif;
+    font-family: Akshar, sans-serif;
 }
 header, section {
     padding: 20px;
