--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ p, li {
 }
 
 #in-class_work {
-    background-color: #9483f5;
+    background-color: #83ecf5;
     padding-top: 40px;
     padding-bottom: 40px;
 }
@@ -33,7 +33,7 @@ p, li {
 }
 
 #inspiration {
-    background-color: #9483f5;
+    background-color: #83ecf5;
     padding-top: 40px;
     padding-bottom: 40px;
 }
