--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     box-sizing: border-box;
 }
 
-@import url("https://fonts.googleapis.com/css?family=Trirong");
+@import url("https://fonts.googleapis.com/css?family=Trirong:100,100i,300,300i,400,400i,700,700i,900,900i");
 
 body {
     margin: 0px;
