--- a/lectures/lecture07/01-box-model/style.css
+++ b/lectures/lecture07/01-box-model/style.css
@@ -30,3 +30,9 @@ p, h2, button {
 img {
     width: 100%;
 }
+
+@media screen and (max-width: 600px) {
+    body {
+        background-color: hotpink;
+    }
+}
