--- a/lectures/lecture07/02-flexbox/style.css
+++ b/lectures/lecture07/02-flexbox/style.css
@@ -13,9 +13,15 @@ flex-direction: 	(row, column, row-reverse, column-reverse)
 flex-wrap: 		    (no-wrap, wrap)
 */
 
+body * {
+    border: solid 1px #000;
+    padding: 5px;
+    margin: 5px;
+}
 
-
-
+main {
+    display: flex;
+}
 
 
 @media only screen and (max-width: 1000px) {
