--- a/lectures/lecture07/01-box-model/style.css
+++ b/lectures/lecture07/01-box-model/style.css
@@ -19,12 +19,12 @@ width
 
 section {
     border: solid 1px rgb(128, 128, 122);
-    padding: 10px;
-    width: 25%;
+    padding: 0px;
+    width: 33%;
 }
 
 p, h2, button {
-    margin: 10px;
+    margin: 20px 20px;
 }
 
 img {
