--- a/lectures/lecture07/01-box-model/style.css
+++ b/lectures/lecture07/01-box-model/style.css
@@ -34,5 +34,11 @@ img {
 @media screen and (max-width: 600px) {
     body {
         background-color: hotpink;
+        font-size: 1.2em;
+    }
+
+    section {
+        border: none;
+        width: 100%;
     }
 }
