--- a/lectures/lecture08/03-responsive-layout-grid-template-aras/style.css
+++ b/lectures/lecture08/03-responsive-layout-grid-template-aras/style.css
@@ -33,29 +33,53 @@ body {
 /* Task 3 */
 
 .task-3.container {
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  grid-template-rows: 1fr 1fr 6fr 1fr;
+  grid-template-areas: 
+    "header header header"
+    "sidebar nav ads"
+    "sidebar main ads"
+    "footer footer footer";
 }
 
 .task-3 .header {
+  grid-area: header;
 }
 
 .task-3 .navigation {
+  grid-area: nav;
 }
 
 .task-3 .ads {
+  grid-area: ads;
 }
 
 .task-3 .sidebar {
+  grid-area: sidebar;
 }
 
 .task-3 .main {
+  grid-area: main;
 }
 
 .task-3 .footer {
+  grid-area: footer;
 }
 
 
 
 @media (max-width: 1020px) {
+  .task-3.container {
+    display: grid;
+    grid-template-columns: 2fr 2fr;
+    grid-template-rows: 1fr 0.3fr 6fr 1fr;
+    grid-template-areas: 
+      "header header"
+      "nav nav"
+      "sidebar main"
+      "ads footer";
+  }
 }
 
 
