--- a/final_project/genres/style_1.css
+++ b/final_project/genres/style_1.css
@@ -13,6 +13,7 @@ main {
     "description description"
     "player opinion"
     "signoff playlist";
+    font-family: "Karla";
 }
 
 header, #description, #opinion, #signoff {
