--- a/final_project/genres/style_2.css
+++ b/final_project/genres/style_2.css
@@ -13,6 +13,7 @@ main {
     "description description"
     "opinion player"
     "playlist signoff";
+    font-family: "Karla";
 }
 
 header, #description, #opinion, #signoff {
